Update to 1.0.0. • Aligned to center when width scale takes over for height scales. • Adjust speed fixes • Readme update

--- a/demo/demo.css
+++ b/demo/demo.css
@@ -9,7 +9,7 @@ html,body {
 	text-align : center;
 	color : #fff;
 	padding : 300px 0;
-	text-shadow : 0 0 25px rgba(0,0,0,0.2);
+	text-shadow : 0px 0px 15px rgba(0,0,0,0.75);
 }
 .mountains .headers h1 {
 	font-size : 72px;
@@ -18,4 +18,12 @@ html,body {
 }
 .mountains .headers h3 {
 	font-size : 24px;
+}
+body > h1 {
+	font-family : 'Arial';
+	margin-left : auto;
+	margin-right : auto;
+	max-width: 600px;
+	padding: 100px;
+	text-align : center;
 }
